get rid of unneeded edge element and remove z-index rules to fix carousel overflows showing

--- a/assets/styles/components/_carousels.scss
+++ b/assets/styles/components/_carousels.scss
@@ -3,7 +3,6 @@
   @include media-md {
     position: relative;
     margin-right: -72px;
-    z-index: z(carousels);
   }
 }
 .flickity-prev-next-button {
